Adds changes to files